# robotics-ai-agents

./: .env.guide  .env.hcs  .gitignore  README.md  example.py  main.py  main2.py  pyproject.toml  requirements.prod.txt
src/: __init__.py
src/config/: __init__.py  settings.py
src/models/: additional_structure.py  conn_models.py  output_models.py  system_prompts.py  tools.py
src/services/: agent_factory.py  eslabon.py  model_factory.py
